classDiagram
    direction LR

    class BenchmarkRunner {
        +dict cfg
        +str base_dir
        +OtiiController otii
        +PiSSH ssh
        +list~Sample~ samples
        +list rows
        +ThermalConfig thermal_cfg
        +load_samples()
        +setup_hardware()
        +run()
        -_run_one(model, threads, rep, llama_cfg)
        -_mk_row(...)
        +save_csv(path)
        +teardown()
    }

    class OtiiController {
        +OtiiConfig cfg
        +otii
        +device
        +project
        +float idle_power_w
        +connect()
        +configure_power()
        +power_on()
        +power_off()
        +measure_idle_bias() float
        +new_project()
        +start_recording()
        +stop_recording()
        +mark() float
        +window_energy(rec, from, to) dict
        +disconnect()
    }

    class OtiiConfig {
        <<dataclass>>
        +str host
        +int port
        +float main_voltage
        +float max_current
        +tuple channels
        +str power_channel
        +int idle_seconds
    }

    class PiSSH {
        +PiConfig cfg
        +client
        +shell
        +str ready_prompt
        +wait_for_boot_and_connect()
        +open_shell()
        +launch_model(cmd, timeout) str
        +send_prompt(prompt, timeout) str
        +stop_model() str
        +run_command(cmd) str
        +measure_temp() float
        +get_throttled_raw() str
        +close()
    }

    class PiConfig {
        <<dataclass>>
        +str host
        +str username
        +str password
        +int ssh_port
        +int boot_wait_seconds
    }

    class ThermalConfig {
        <<dataclass>>
        +bool enabled
        +bool cooldown_enabled
        +float max_temp_c
        +float cooldown_target_c
        +float cooldown_min_s
        +bool abort_on_throttle
        +int max_retries
    }

    class Sample {
        <<dataclass>>
        +str benchmark
        +str btype
        +str id
        +str prompt
        +str expected
        +dict meta
    }

    class FakeOtii {
        <<simulazione>>
        +measure_idle_bias()
        +window_energy(...)
        +start_recording()
        +stop_recording()
    }

    class FakeSSH {
        <<simulazione>>
        +launch_model(...)
        +send_prompt(...)
        +measure_temp()
        +get_throttled_raw()
    }

    class thermal {
        <<module>>
        +parse_throttled(raw) dict
        +read_state(ssh) dict
        +wait_until_cool(ssh, cfg) dict
    }

    class scoring {
        <<module>>
        +score(btype, response, expected, meta) dict
    }

    class llama_parser {
        <<module>>
        +parse_timings(text) dict
        +extract_response(raw, prompt) str
    }

    class datasets_loader {
        <<module>>
        +load_all(benchmarks, base_dir) list~Sample~
    }

    class analysis {
        <<module>>
        +run_analysis(csv, cfg, base_dir)
    }

    BenchmarkRunner o-- OtiiController : usa
    BenchmarkRunner o-- PiSSH : usa
    BenchmarkRunner *-- ThermalConfig
    BenchmarkRunner o-- "0..*" Sample
    OtiiController *-- OtiiConfig
    PiSSH *-- PiConfig
    FakeOtii ..|> OtiiController : stessa interfaccia
    FakeSSH ..|> PiSSH : stessa interfaccia
    BenchmarkRunner ..> thermal : chiama
    BenchmarkRunner ..> scoring : chiama
    BenchmarkRunner ..> llama_parser : chiama
    BenchmarkRunner ..> datasets_loader : chiama
    BenchmarkRunner ..> analysis : chiama
    thermal ..> ThermalConfig
    datasets_loader ..> Sample
